# marovany_detection

./: .gitignore  AnalysisWidget.py  AudioPlayer.py  FigureWidget.py  FileAnalysis.py  FileAnalysisHeader.py  FileAnalysisWidget.py  Fonctions.py  MIDIconversion_marovany - Google Drive.url  MainContainer.py  MainWindow.py  ParamDialog.py  PlotWidget.py  README.md  analysis.py  analysis_widget.py  app.py  build-linux.sh  build-script  build-win.bat  gui.py  install_linux.sh  install_macos.command  install_win.ps1  main.py  main_window.py  marovany.spec  menu.py  notes.txt  plot_widget.py  pyproject.toml  requirements.txt  run_linux.sh  run_macos.command  run_win.ps1  utils.py
Widgets/: FileAnalysis.py  FileAnalysisHeader.py  MainContainer.py  MainWindow.py
analysis/: Copy of 4 Piano Audio to Midi.ipynb  analysis.py  analysis_old.py  dialogtest.py  main.ipynb  main_functions.ipynb  main_old.ipynb  test.py  windowtest.py  windowtest2.py
install/: build-script  install_linux.sh  install_macos.command  install_macos.sh  install_win.ps1  requirements.txt  run.sh  run_win.ps1
old/: ChooseFileDialog.py  FigureWidget.py  FileAnalysis.py  FileAnalysisHeader.py  Fonctions.py  MainContainer.py  MainWindow.py  ParamDialog.py  analysis.py
pyQt-test/: all.py  layout.py  main.py  scroll.py
static/: calls.js  main.js  script.js
static/vendors/: wavesurfer.min.js  wavesurfer.regions.min.js  wavesurfer.timeline.min.js
templates/: index.html  index.old.html
tk-version/: gui.py  main.py
