[tool.poetry]
name = "midiconversion_marovany"
version = "0.1.0"
description = ""
authors = ["flo-bou <florent.b@gmx.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
PyQt6 = "^6.3.1"
numpy = "1.22.*"
librosa = "^0.9.2"
pypianoroll = "^1.0.4"
pretty_midi = "^0.2.9"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
