[tool.poetry]
name = "midiconversion_marovany"
version = "0.3.0"
description = ""
authors = ["flo-bou <florent.b@gmx.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
PyQt6 = "^6.3.1"
numpy = "~1.22.4"
librosa = "^0.9.2"
pypianoroll = "^1.0.4"
pretty_midi = "^0.2.9"
matplotlib = "^3.5.3"
llvmlite = "^0.39.0"
pyinstaller = "~5.3"
pandas = "^2.0.3"
ipython = "8.12.2"
torch = "^2.0.1"
torch-yin = "^0.1.3"
sounddevice = "^0.4.6"
scipy = "1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
